fix: overflow in session modal title
user details dialog is now a fixed width

--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -142,3 +142,14 @@
     }
   }
 }
+
+.user-details-dialog {
+  .session-confirm-wrapper {
+    .session-modal__header {
+      max-width: 400px;
+    }
+    .session-modal__body {
+      width: 400px;
+    }
+  }
+}
